Test for pharmacy controller